--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,6 +2,11 @@
 // Body
 $body-bg: #f5f8fa;
 
+$primary: #3097D1;
+
+$newTripColor: #f35b3f;
+
+$navbar-links: white;
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
