--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,8 +7,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Font-Awesome
+@import '~font-awesome/scss/font-awesome';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+@import "components/layout/header";
+@import "components/layout/sidebar-user";
+@import "components/new-trip-wizard";
