--- a/resources/assets/sass/components/_new-trip-wizard.scss
+++ b/resources/assets/sass/components/_new-trip-wizard.scss
@@ -1,10 +1,22 @@
 .f1 {
-	padding: 25px; background: #fff;
-	-moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	padding: 25px; 
+	background: #fff;
+	-moz-border-radius: 4px; 
+	-webkit-border-radius: 4px; 
+	border-radius: 4px;
 }
-.f1 h3 { margin-top: 0; margin-bottom: 5px; text-transform: uppercase; }
+.f1 h3 { 
+	margin-top: 0; 
+	margin-bottom: 5px; 
+	text-transform: uppercase; 
+}
 
-.f1-steps { overflow: hidden; position: relative; margin-top: 20px; text-align: center;}
+.f1-steps { 
+	overflow: hidden;
+	 position: relative; 
+	 margin-top: 20px; 
+	 text-align: center;
+}
 
 .f1-progress { position: absolute; top: 24px; left: 0; width: 100%; height: 1px; background: #ddd; }
 .f1-progress-line { position: absolute; top: 0; left: 0; height: 1px; background: $newTripColor; }
