--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,3 +13,5 @@
 @import "components/layout/header";
 @import "components/layout/sidebar-user";
 @import "components/new-trip-wizard";
+
+@import '~vue2-autocomplete-js/dist/style/vue2-autocomplete.css'
