--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13552,10 +13552,14 @@ a.text-dark:focus {
   max-height: 50px;
 }
 
-.navbar a {
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-toggler {
+  color: white;
+}
+
+.navbar-light a {
   text-decoration: none;
   background-color: transparent;
-  color: white;
 }
 
 #navbarSupportedContent {
